--- a/_config.yml
+++ b/_config.yml
@@ -3,12 +3,12 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Hexo
-subtitle:
-description:
-author: Miao pei
-language:
-timezone:
+title: Micheal
+subtitle: 记录学习的技能和遇到的问题
+description: 做自己爱做的事儿，爱自己在做的事儿!
+author: 苗沛
+language: zh-CN
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -25,7 +25,7 @@ archive_dir: archives
 category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
-skip_render:
+skip_render: 
 
 # Writing
 new_post_name: :title.md # File name of new posts
@@ -57,13 +57,40 @@ time_format: HH:mm:ss
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+# 首页的分页设置
+index_generator:
+    per_page: 5
 pagination_dir: page
+
+#归档页的分页设置
+archive_generator:
+    per_page: 30
+    yearly: true
+    monthly: true
+
+#标签页的分页设置
+tag_generator:
+    per_page: 20
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: yilia
+
+# Extensions
+Plugins:
+  - hexo-generator-feed
+  - hexo-generator-sitemap
+
+# Feed Atom
+feed:
+  type: atom      #feed 类别（atom/rss2）
+  path: atom.xml  #rss 路径
+  limit: 20       #在 rss 中最多生成的文章数（0显示所有）
+
+# sitemap
+sitemap:
+  path: sitemap.xml
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
