--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -3,19 +3,19 @@
 menu:
   主页: /
   所有文章: /archives
-  随笔: /tags/随笔/
+  #随笔: /tags/随笔/
 
 # SubNav
 subnav:
-  github: "#"
-  weibo: "#"
-  rss: "#"
-  zhihu: "#"
+  github: "https://github.com/miaopei"
+  weibo: "3922739561"
+  #rss: "#"
+  #zhihu: "#"
   #qq: "#"
   #weixin: "#"
   #jianshu: "#"
   #douban: "#"
-  #mail: "mailto:litten225@qq.com"
+  mail: "miaopei163@163.com"
   #facebook: "#"
   #google: "#"
   #twitter: "#"
@@ -52,19 +52,19 @@ alipay:
 weixin: 
 
 # Miscellaneous
-baidu_analytics: ''
+baidu_analytics: '0f8adb589aa030cb55af215d357749f5'
 google_analytics: ''
 favicon: /favicon.png
 
 #你的头像url
-avatar:
+avatar: http://wx4.sinaimg.cn/orj360/e9d04169ly1fde7jy4bquj20ek0hf7gh.jpg
 
 #是否开启分享
 share_jia: true
 
 #是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
 #若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
-duoshuo: false
+duoshuo: miaopei
 
 # 样式定制 - 一般不需要修改，除非有很强的定制欲望…
 style:
