--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -47,9 +47,9 @@ reward_type: 1
 # 打赏wording
 reward_wording: '谢谢你请我吃糖果'
 # 支付宝二维码图片地址，跟你设置头像的方式一样。比如：/assets/img/alipay.jpg
-alipay: 
+alipay: /assets/img/alipay.jpg
 # 微信二维码图片地址
-weixin: 
+weixin: /assets/img/weixin.jpg
 
 # Miscellaneous
 baidu_analytics: '0f8adb589aa030cb55af215d357749f5'
