--- a/themes/yilia/_config.yml
+++ b/themes/yilia/_config.yml
@@ -60,6 +60,9 @@ baidu_analytics: '0f8adb589aa030cb55af215d357749f5'
 google_analytics: ''
 favicon: /favicon.png
 
+# 统计
+baidu_tongji: true
+
 #你的头像url
 avatar: http://wx4.sinaimg.cn/orj360/e9d04169ly1fde7jy4bquj20ek0hf7gh.jpg
 
