--- a/_config.yml
+++ b/_config.yml
@@ -78,9 +78,9 @@ tag_generator:
 theme: yilia
 
 # Extensions
-Plugins:
-  - hexo-generator-feed
-  - hexo-generator-sitemap
+#plugins:
+#  - hexo-generator-feed
+#  - hexo-generator-sitemap
 
 # Feed Atom
 feed:
