--- a/_config.yml
+++ b/_config.yml
@@ -76,6 +76,7 @@ tag_generator:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: yilia
+#theme: next
 
 # Extensions
 #plugins:
