--- a/_config.yml
+++ b/_config.yml
@@ -75,8 +75,8 @@ tag_generator:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: yilia
-#theme: next
+#theme: yilia
+theme: next
 
 # Extensions
 #plugins:
