--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Mr.Miaow Blog
 subtitle: 天道酬勤，地道酬善，人道酬誠，商道酬信，業道酬精
-description: 滴水石穿，不是力量大，而是功夫深!
+description: 人生如逆水行舟，不进则退！
 author: 苗沛
 language: zh-CN
 timezone: Asia/Shanghai
