--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "hexo-renderer-stylus": "^0.3.1",
     "hexo-server": "^0.3.3",
     "hexo-symbols-count-time": "^0.4.4",
+    "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-dplayer": "^0.3.1",
     "lodash": "^4.17.11",
     "npm": "^6.7.0",
