--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 title: Mr.Miaow Blog
 subtitle: 天道酬勤，地道酬善，人道酬誠，商道酬信，業道酬精
 description: 人生如逆水行舟，不进则退！
-author: 苗沛
+author: Mr.Miaow
 language: zh-CN
 timezone: Asia/Shanghai
 
