--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Mr.Miaow Blog
-subtitle: 天道酬勤，地道酬善，人道酬誠，商道酬信，業道酬精
-description: 人生如逆水行舟，不进则退！
+subtitle: Do what you say, say what you do.
+description: 
 author: Mr.Miaow
 language: zh-CN
 timezone: Asia/Shanghai
