--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "hexo": {
-    "version": "3.8.0"
+    "version": "3.9.0"
   },
   "dependencies": {
     "eslint": "^5.13.0",
@@ -30,6 +30,7 @@
     "hexo-symbols-count-time": "^0.4.4",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-dplayer": "^0.3.1",
+    "hexo-wordcount": "^6.0.1",
     "lodash": "^4.17.11",
     "npm": "^6.7.0",
     "underscore.string": "^3.3.5",
