--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-abbrlink": "^2.0.5",
     "hexo-autonofollow": "^1.0.1",
     "hexo-baidu-url-submit": "0.0.6",
+    "hexo-blog-encrypt": "^2.2.1",
     "hexo-deployer-git": "^1.0.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-baidu-sitemap": "^0.1.6",
