--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -342,7 +342,7 @@ post_meta:
   item_text: true
   created_at: true
   updated_at:
-    enable: true
+    enable: false
     another_day: true
   categories: true
 
@@ -363,7 +363,7 @@ codeblock:
   border_radius:
   # Add copy button on codeblock
   copy_button:
-    enable: true
+    enable: false
     # Show text copy result
     show_result: true
     # Style: only 'flat' is currently available, leave it blank if you prefer default theme
@@ -451,7 +451,7 @@ custom_logo:
 # Code Highlight theme
 # Available values: normal | night | night eighties | night blue | night bright
 # https://github.com/chriskempson/tomorrow-theme
-highlight_theme: night eighties
+highlight_theme: normal 
 
 # Enable "cheers" for archive page.
 cheers: true
@@ -835,9 +835,9 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn to get AppID and AppKey.
 leancloud_visitors:
-  enable: false
-  app_id: #<app_id>
-  app_key: #<app_key>
+  enable: true
+  app_id: XmEEJizQS0jhsCqlTDm3QOK5-gzGzoHsz
+  app_key: qU7onoX7aRWpLf04JedNtwXo
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
