--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hexo-generator-sitemap": "^1.2.0",
     "hexo-generator-tag": "^0.2.0",
     "hexo-inject": "^1.0.0",
+    "hexo-leancloud-counter-security": "^1.4.0",
     "hexo-math": "^3.0.4",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^1.0.1",
