--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -662,7 +662,7 @@ changyan:
 # You can get your appid and appkey from https://leancloud.cn
 # More info available at https://valine.js.org
 valine:
-  enable: false # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
+  enable: true # When enable is set to be true, leancloud_visitors is recommended to be closed for the re-initialization problem within different leancloud adk version.
   appid: XmEEJizQS0jhsCqlTDm3QOK5-gzGzoHsz # your leancloud application appid
   appkey: qU7onoX7aRWpLf04JedNtwXo # your leancloud application appkey
   notify: false # mail notifier, See: https://github.com/xCss/Valine/wiki
@@ -835,7 +835,7 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn to get AppID and AppKey.
 leancloud_visitors:
-  enable: true
+  enable: false
   app_id: XmEEJizQS0jhsCqlTDm3QOK5-gzGzoHsz
   app_key: qU7onoX7aRWpLf04JedNtwXo
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
