--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-tag-dplayer": "^0.3.1",
     "hexo-wordcount": "^6.0.1",
+    "leancloud-storage": "^2.5.4",
     "lodash": "^4.17.11",
     "npm": "^6.7.0",
     "underscore.string": "^3.3.5",
