--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -178,6 +178,8 @@ menu:
   #schedule: /schedule/ || calendar # 日程表
   #sitemap: /sitemap.xml || sitemap # 转点地图
   #commonweal: /404/ || heartbeat
+  messages: /messages/ || user # 留言板  
+  top: /top/ || signal # 阅读最多
 
 # Enable / Disable menu icons / item badges.
 menu_settings:
@@ -342,7 +344,7 @@ post_meta:
   item_text: true
   created_at: true
   updated_at:
-    enable: true
+    enable: false
     another_day: true
   categories: true
 
@@ -835,13 +837,13 @@ rating:
 # Show number of visitors to each article.
 # You can visit https://leancloud.cn to get AppID and AppKey.
 leancloud_visitors:
-  enable: false
+  enable: true
   app_id: 8my53W9pnVTOdpPvvH1P76YB-gzGzoHsz
   app_key: DxtWRruxKOO4SPacKO9Mxe8g
   # Dependencies: https://github.com/theme-next/hexo-leancloud-counter-security
   # If you don't care about security in leancloud counter and just want to use it directly
   # (without hexo-leancloud-counter-security plugin), set `security` to `false`.
-  security: true
+  security: false
   betterPerformance: false
 
 # Another tool to show number of visitors to each article.
@@ -857,7 +859,7 @@ firestore:
 # Show Views / Visitors of the website / page with busuanzi.
 # Get more information on http://ibruce.info/2015/04/04/busuanzi
 busuanzi_count:
-  enable: true
+  enable: false
   total_visitors: false
   total_visitors_icon: user
   total_views: false
