--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hexo-inject": "^1.0.0",
     "hexo-leancloud-counter-security": "^1.4.0",
     "hexo-math": "^3.0.4",
+    "hexo-pdf": "^1.1.1",
     "hexo-renderer-ejs": "^0.3.0",
     "hexo-renderer-marked": "^1.0.1",
     "hexo-renderer-stylus": "^0.3.1",
